js wuzzi fix; description error not errorring; handlerwrapper cleanup; space removed in ui; buttons set to nowrap

--- a/cockpit/css/ui.css
+++ b/cockpit/css/ui.css
@@ -24,18 +24,18 @@ button.highlight { background-color: #cc0000; }
 #areaendpoints    { height: 100%; overflow: auto; }
 #areaexecution    { height: 9.6em; overflow: auto; }
 
-#areainstance                       { height: 9.6em; overflow: auto; }
+#areainstance                       { height: 9.6em; overflow: hidden; }
 #areainstance td:nth-child(1)       { padding-right: 0.5em; }
 #areainstance td:nth-child(2)       { padding-right: 0.5em; }
 #areainstance input                 { padding: 0; margin:0; }
-#areainstance table.compact.loadsave td:nth-child(3) { padding-left: 0.5em; }
+#areainstance button                { white-space:nowrap; }
 #areainstance table.compact.loadsave td:nth-child(4) { padding-left: 0.5em; border-left: 1px solid ButtonShadow; }
 #areainstance table.compact.loadsave td:nth-child(5) { padding-left: 0.5em; }
 #areainstance table.compact.loadsave td:nth-child(6) { padding-left: 0.5em; border-left: 1px solid ButtonShadow; }
 #areainstance table.compact.loadsave tr:nth-child(1) td { padding-top: 0.5em; }
 #areainstance hr { height: 1px; color: ButtonShadow; background-color: ButtonShadow; border: 0 none; padding-bottom: 0; margin-bottom: 0; }
-#areainstance select                { width: 100% }
-#areainstance input[type=file]      { width: 100% }
+#areainstance select                { width: 28em; }
+#areainstance input[type=file]      { width: 28em; }
 #areainstance table.compact.loadsave td:nth-child(4) button { height: 4em; }
 #areainstance table.compact.loadsave td:nth-child(6) button { height: 4em; }
 
